--- a/.github/workflows/cml.yaml
+++ b/.github/workflows/cml.yaml
@@ -18,4 +18,4 @@ jobs:
           echo " Model Performance" >> report.md
           echo "Model performance metrics are on the plot below." >> report.md
           cml-publish model_results.png --md >> report.md
-          #cml comment create report.md
+          cml comment create report.md
